<resources>
    <string name="app_name">p4_7s21</string>
    <string name="p1titulo">Manejo de actividades</string>
    <string name="p1actbasc">Actividad Basica</string>
    <string name="p2actparce">Actividad Parceable</string>
    <string name="p1actresp">Actividad Resultados</string>
    <string name="p1ingnombre">Ingresa aqui tu nombre</string>
    <string name="p1ingedad">Ingresa qui tu edad</string>
    <string name="p1ingcorreo">Ingresa aqui tu correo</string>
    <string name="p2titulo">Actividad basica</string>
    <string name="p2mensaje">Nombre </string>
    <string name="p2btnreg">Regresar a la actividad principal</string>
    <string name="p3titulo">Elementos parcelables datos</string>
    <string name="p3informacion">Datos obtenidos</string>
    <string name="p3btnregresa">Regresar a Home</string>

</resources>