<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A5DE38A"
    tools:context=".PrincipalActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="371dp"
        android:layout_height="87dp"
        android:layout_marginTop="16dp"
        android:background="#4A5DE38A"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/p1titulo"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/p1txtnombre"
        android:layout_width="383dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:autofillHints="nombre"
        android:ems="10"
        android:hint="@string/p1ingnombre"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/p1btnar"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="@+id/p1btnar"
        app:layout_constraintTop_toBottomOf="@+id/p1btnar" />

    <Button
        android:id="@+id/p1btnap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:onClick="presionaBoton"
        android:text="@string/p2actparce"
        app:layout_constraintEnd_toEndOf="@+id/p1btnab"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="@+id/p1btnab"
        app:layout_constraintTop_toBottomOf="@+id/p1btnab" />

    <Button
        android:id="@+id/p1btnar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:onClick="presionaBoton"
        android:text="@string/p1actresp"
        app:layout_constraintEnd_toEndOf="@+id/p1btnap"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/p1btnap"
        app:layout_constraintTop_toBottomOf="@+id/p1btnap" />

    <Button
        android:id="@+id/p1btnab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:onClick="presionaBoton"
        android:text="@string/p1actbasc"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/p1txtedad"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:autofillHints="edad"
        android:ems="10"
        android:hint="@string/p1ingedad"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p1txtnombre"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/p1txtcorreo"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:autofillHints="correo"
        android:ems="10"
        android:hint="@string/p1ingcorreo"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p1txtedad"
        tools:ignore="VisualLintTextFieldSize" />

</androidx.constraintlayout.widget.ConstraintLayout>